--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
 $body-font-family: 'Open Sans', sans-serif;
-$heading-font-family: 'Work Sans', sans-serif;
+$heading-font-family: 'Roboto', sans-serif;
 
 $headings: (
   'h4': (
